--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="text-center">
             <img src="images/one.jpg" class="img-fluid">
             <br>
-            <h1>Will You Marry Me?</h1>
+            <h1>Lấy anh nha Xuân Mai?</h1>
             <input type="button" onclick="location.href='yes.html'" value="Yes" class="btn btn-success">
             <input type="button" onclick="location.href='confirm.html'" value="No" class="btn btn-danger">
             <br>
